--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ black==21.7b0
 click==8.0.1
 Django==3.2.6
 django-allauth==0.41.0
+django-countries==7.2.1
 django-crispy-forms==1.12.0
 oauthlib==3.1.1
 pathspec==0.9.0
