--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,23 @@
 asgiref==3.4.1
-black==21.7b0
-click==8.0.1
-Django==3.2.6
-django-allauth==0.41.0
+cycler==0.10.0
+Django==3.2.7
+django-allauth==0.45.0
 django-countries==7.2.1
 django-crispy-forms==1.12.0
+fabio==0.12.0
+h5py==3.4.0
+kiwisolver==1.3.2
+matplotlib==3.4.3
+numpy==1.21.2
 oauthlib==3.1.1
-pathspec==0.9.0
-Pillow==8.3.1
+Pillow==8.3.2
+PyJWT==2.1.0
+PyQt5==5.15.4
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.9.0
 python3-openid==3.2.0
 pytz==2021.1
-regex==2021.8.21
 requests-oauthlib==1.3.0
-sqlparse==0.4.1
+silx==0.15.2
+sqlparse==0.4.2
 stripe==2.60.0
-tomli==1.2.1
