--- a/requirements.txt
+++ b/requirements.txt
@@ -18,8 +18,9 @@ debugpy==1.4.3
 decorator==5.1.0
 defusedxml==0.7.1
 distlib==0.3.2
+dj-database-url==0.5.0
 Django==3.2
-django-allauth==0.46.0
+django-allauth==0.47.0
 django-countries==7.2.1
 django-crispy-forms==1.13.0
 docutils==0.17.1
@@ -66,12 +67,13 @@ pbr==5.6.0
 pep8==1.7.1
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==8.4.0
+Pillow==9.0.0
 pipenv==2021.5.29
 pkginfo==1.7.1
 platformdirs==2.3.0
 prometheus-client==0.11.0
 prompt-toolkit==3.0.20
+psycopg2-binary==2.9.3
 ptyprocess==0.7.0
 pycodestyle==2.7.0
 pycparser==2.20
@@ -102,11 +104,11 @@ smmap==4.0.0
 snowballstemmer==2.1.0
 sqlparse==0.4.2
 stevedore==3.4.0
-stripe==2.63.0
+stripe==2.64.0
 terminado==0.12.1
 testpath==0.5.0
 toml==0.10.2
-tomli==1.2.2
+tomli==1.2.3
 tornado==6.1
 tqdm==4.62.2
 traitlets==5.1.0
